# SparseConflictEval

./: .gitignore  CMakeLists.txt  README.md  benchmark_spm_spmm.sh  build_project.sh  build_taco.sh  download_tensors.sh  execute.sh  histogram.sh
data/: chou-csr-to-csc.csv  d3_coo_qsort.csv  d3_coo_sort.csv  d3_coo_sort_wvector.csv  dotprod-dense.csv  dotprod-dense_wassem.csv  dotprod-denseout.csv  elementwise-mul-with.csv  elementwise-mul-without.csv  elementwise-mul.csv  elementwise-mul_.csv  elementwise-mul__.csv  elementwise-mul_no_assemble.csv  elementwise-mul_wassem.csv  hadamard-spmm.csv  initial-stats.csv  matrices.csv  matrix-stats.csv  matrix_statistics.csv  matrix_statistics2.csv  matrix_statistics_log.csv  scipy-csr-to-csc.csv  spm-spm-vs-mkl.csv  spmm-spm.csv  tensor-elwisemul.csv  tensor_statistics_tns.csv  tensorcontract-1dout.csv  tensors.csv
include/: gen_mat.h  input_parser.h  iterator.h
scripts/: benchmark-tensorcontract-3d.sh  benchmark-transpose-3d_qsort.sh  benchmark_all.sh  benchmark_chou_taco_conversion.sh  benchmark_dotprod_denseout.sh  benchmark_elementwise-mul.sh  benchmark_hadamard_spmm.sh  benchmark_kick_the_tires.sh  benchmark_mtx_row_stats.sh  benchmark_scipy_transpose.sh  benchmark_spm_spmm.sh  benchmark_transpose.sh  histogram.py  histogram_tns.py  matrix-plot.py  mtx_row_stats.py  plot-bar-and-heatmap.py  range.py  range1.py  tensor-plot.py  transpose.py
src/: benchmark_spm_spm.cpp  benchmark_spm_spm_spm.cpp  dotprod-denseout.cpp  dotprod-spout.cpp  elementwise-mul.cpp  hadamard-spmm.cpp  iterator.cpp  singlemat-contract.cpp  singlemat-contractl.cpp  sort2.cpp  sort2_.cpp  sort3.cpp  sort3_manual.cpp  sort3_qsort.cpp  spmspm.cpp  taco-conversion.cpp  tensor-elwisemul.cpp  tensorcontract-1dout.cpp
